app/assets/stylesheets/pages/cards.scss
.cards {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
  align-items: flex-start;
  width: 100%;
}
.each-card {
  width:100%;
  height: 100px;
  margin-bottom: 5px;
  text-align: center;
  display: flex;
  border-radius: 12px;
  background-color: white;
  transition: .6s ease-in-out;
  align-items: center;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));;
}
.flex{
  display: flex;
  justify-content: space-between;
}
.name-and-price {
  height: 100%;
  color: black;
  text-align: left;
  padding-left: 25px;
}
 a {
  text-decoration: none;
}
.btn-card{
  margin-right: 12px;
  width: 95px;
}
.name {
  width: 15rem;
  height: 53%;
}
.price {
  padding-right: 50%;
  height: 36px;
}

.image img {
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
  height: 100px;
  object-fit: cover;
}

.image {
  height: 100px;

}

